# syncServer

./: .dockerignore  .gitignore  .readthedocs.yaml  404.html  CHANGES-server.md  CHANGES.md  README.md  alembic.ini  index.html  pyproject.toml  ruff.toml
.github/workflows/: docker-image.yml  project-docs.yml  tests.yml
app/: __init__.py
app-overview/: index.html
app/client/: __main__.py  config.py  cui.py  gui.py  interface.py  main.py  models.py  workers.py
app/client/controllers/: apps.py  login.py
app/client/ui/: add_account_dialog.py  create_apikey_dialog.py  create_apikey_success_dialog.py  files_download_manager.py  main.py  rename_file_dialog.py  (+2 more)
app/server/: __init__.py  deps.py  main.py
changelog/: client.md  main.md  server.md
client/: __init__.py  cui.py  gui.py  interface.py
database-component/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: api-overview.md  app-overview.md  client-interface.md  database-component.md  gui-interface.md  index.md  server-db.md
migrations/: env.py  script.py.mako
migrations/versions/: ae2c87760e2e_first_revision_of_models.py
pyside6_ui/: add_account_dialog.ui  create_apikey_dialog.ui  create_apikey_success_dialog.ui  files_download_manager.ui  main.ui  rename_file_dialog.ui  rename_folder_dialog.ui  trashbin_manager.ui
scripts/: generate-client-ui.py  migrations.sh  tests.sh
search/: search_index.json
server/: CHANGES.md  __init__.py  __main__.py  _db.py  _server.py  requirements.in  requirements.txt
server/app/: deps.py  main.py
server/docker/: Dockerfile
server/scripts/: tests.sh
server/tests/: conftest.py
tests/: conftest.py
tests/database/: test_deletedfiles_db.py  test_files_db.py  test_folders_db.py  test_session_db.py  test_users_db.py
tests/routers/: test_auth.py  test_deletedfiles.py  test_files.py  test_folders.py  test_users.py
(+38 files in other folders)
