[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syncserver-fastapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.11",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.0",
    "valkey>=6.1.0",
]
description = "A FastAPI rewrite of the original newguy103-syncserver. Includes modern features of Python and asyncio."
authors = [
    { name = "NewGuy103", email = "userchouenthusiast@gmail.com" }
]
readme = "README.md"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"syncserver_fastapi" = "app"}
packages = ["syncserver_fastapi"]
